# advent-of-code

./: .gitignore  README.md  new_day.sh  prelude.py  solve.sh
2023/day02/: part1.py
haskell/: .gitignore  Dockerfile  README.md  aoc.cabal
haskell/src/: Main.hs  Util.hs  Year2024.hs
haskell/src/Data/: Pos.hs  Pos3.hs
haskell/src/Year2024/: Day01.hs
ocaml/: .gitignore  .ocamlformat  aoc.opam  completed_days.ml  dune  dune-project  justfile
ocaml/lib/: util.ml
ocaml/src/year_2024/day_01/: solution_01.ml
python/: README.md  default.py  new_day.sh  prelude.py  solve.sh
python/2023/day01/: part1.py  part2.py
python/2023/day02/: part2.py
python/2023/day03/: part1.py  part2.py
python/2023/day04/: part1.py  part2.py
python/2023/day05/: part1.py  part2.py
python/2023/day06/: part1.py  part2.py
python/2023/day07/: part1.py
python/2023/day08/: part1.py  part2.py
python/2023/day09/: part1.py  part2.py
python/2023/day10/: part1.py
python/2023/day15/: part1.py  part2.py
python/2024/day01/: part1.py  part2.py
python/2024/day02/: part1.py  part2.py
python/2024/day03/: part1.py  part2.py
python/2024/day04/: part1.py  part2.py
python/2024/day05/: part1.py  part2.py
python/2024/day06/: part1.py  part2.py
python/2024/day07/: part1.py  part2.py
python/2024/day08/: part1.py  part2.py
python/2024/day09/: part1.py  part2.py
python/2024/day10/: part1.py  part2.py
python/2024/day11/: part1.py  part2.py
python/2024/day12/: part1.py  part2.py
python/2024/day13/: part1.py  part2.py
python/2024/day14/: part1.py  part2.py
python/2024/day15/: part1.py  part2.py
python/2024/day16/: part1.py  part2.py
python/2024/day17/: part1.py  part2.py
python/2024/day18/: part1.py  part2.py
python/2024/day19/: part1.py  part2.py
python/2024/day20/: part1.py  part2.py
python/2024/day21/: part1.py  part2.py
python/2024/day22/: part1.py  part2.py
python/2024/day23/: part1.py  part2.py
python/2024/day24/: part1.py  part2.py
python/2024/day25/: part1.py  part2.py
python/2025/day01/: part1.py  part2.py
python/2025/day02/: part1.py  part2.py
python/2025/day03/: part1.py  part2.py
python/2025/day04/: part1.py  part2.py
python/2025/day05/: part1.py  part2.py
python/2025/day06/: part1.py  part2.py
python/2025/day07/: part1.py  part2.py
python/2025/day08/: part1.py  part2.py
python/2025/day09/: part1.py  part2.py
python/2025/day10/: part1.py  part2.py
python/2025/day11/: part1.py  part2.py
python/2025/day12/: part1.py
rust/: .gitignore  Cargo.toml  README.md  benchmarks.txt  justfile
rust/2023/day-01/: Cargo.toml
rust/2023/day-01/benches/: benchmarks-criterion.rs  benchmarks.rs
rust/2023/day-01/src/: part1.rs  part2.rs
rust/2023/day-02/: Cargo.toml
rust/2023/day-02/benches/: benchmarks.rs
rust/2023/day-02/src/: part1.rs  part2.rs
rust/2023/day-04/: Cargo.toml
rust/2023/day-04/benches/: benchmarks.rs
rust/2023/day-04/src/: part1.rs  part2.rs
rust/2023/day-05/: Cargo.toml
rust/2023/day-05/benches/: benchmarks.rs
rust/2023/day-05/src/: part1.rs
rust/2023/day-06/: Cargo.toml
rust/2023/day-06/benches/: benchmarks.rs
rust/2023/day-06/src/: part1.rs  part2.rs
rust/2023/day-08/: Cargo.toml
rust/2023/day-08/benches/: benchmarks.rs
rust/2023/day-08/src/: part1.rs  part2.rs
rust/daily-template/: Cargo.toml
rust/daily-template/benches/: benchmarks.rs
rust/daily-template/src/: custom_error.rs  part1.rs  part2.rs
