(env
 (dev
  ; OCaml compilation flags
  (flags
   ; Configure compiler warnings
   ; Dune makes all warnings fatal by default.
   ;
   ; -w      Means we are configuring warnings.
   ; -num    Disable warning number num.
   ; +num    Enable warning number num.
   ; -26     [unused-var] - disable.
   ; -27     [unused-var-strict] - disable.
   ; -32     [unused-value-declaration] - disable.
   ; -33     [unused-open] - disable.
   ;         Disable these for something as hacky as Advent of Code.
   ;
   ; for more info see `man ocamlc` and look for `-w warning-list`.
   (:standard -w -26-27-33))))

(rule
 (mode promote)
 (alias runtest)
 (deps
  (glob_files **/*.expected))
 (action
  (progn
   (with-stdout-to
    COMPLETED.md
    (run ./completed_days.exe))
   (bash "cat COMPLETED.md"))))

(executable
 (name completed_days)
 (public_name completed_days)
 (libraries aoc containers))
