[workspace]
resolver = "2"

members = ["20*/day-*"]
default-members = ["20*/day-*"]

[workspace.dependencies]
divan = "0.1.4"
glam = "0.24.2"
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"

[profile.flamegraph]
inherits = "release"
debug = true

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
