[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
dhat = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "{{project-name}}-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
