[package]
name = "y2023-day-01"
version = "0.1.0"
edition = "2021"

[dependencies]
dhat = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
nom = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "y2023-day-01-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "y2023-day-01-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
